--- a/front_end/package.json
+++ b/front_end/package.json
@@ -6,22 +6,19 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-
-    "bootstrap": "^5.3.3",
-
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "dayjs": "^1.11.11",
     "js-cookie": "^3.0.5",
-
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -38,3 +35,4 @@
     ]
   }
 }
+
